2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Free the option context on error too, and don't duplicate
	the private-instance option.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Don't make the nonblocking alert modal!

2006-02-03  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.h:
	* embed/mozilla/EphyPromptService.cpp: (ShowNonBlockingAlert):
	* embed/mozilla/AutoJSContextStack.cpp:

	Fix compilation against trunk + some typos.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:

	Fix non-debug builds.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus),
	(ephy_dbus_get_property), (ephy_dbus_set_property),
	(ephy_dbus_class_init), (_ephy_dbus_startup):
	* src/ephy-dbus.h:
	* src/ephy-main.c: (main):

	Only claim the DBUS name when not running as private instance.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/AutoJSContextStack.cpp:
	* embed/mozilla/AutoJSContextStack.h:

	Helper class that pushes a null JS context on the stack,
	and pops it in the destructor.

	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/PrintingPromptService.cpp:

	Push a null JS context on the stack when we run a recursive
	mainloop. Fixes the epiphany equivalend of camino bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=179307.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Add GECKO_XPIDL to check for xpidl compiler and include directory.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Add GECKO_CHECK_HEADERS, wrapping AC_CHECK_HEADERS.
