@@ -1,3 +1,9 @@
+2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmarks.c
+	
+	Improve code quality of function to determine similar bookmarks.
+
 2006-02-03  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-main.c: (main):
